--- a/source/_posts/other/九败一胜读书笔记.md
+++ b/source/_posts/other/九败一胜读书笔记.md
@@ -3,6 +3,7 @@ layout: post
 title: 九败一胜读书笔记
 date: 2019-08-19 22:02:58
 categories: 读书笔记
+toc: true
 ---
 获取的长期经验不是最重要的，快速学习能力是决定一个人发展现状及未来前景的重要因素。
 
