--- a/source/_posts/miniprogram/微信订阅号开发之获取网页授权.md
+++ b/source/_posts/miniprogram/微信订阅号开发之获取网页授权.md
@@ -2,6 +2,7 @@
 title: 微信订阅号开发之获取网页授权
 date: 2018-09-17 19:02:20
 categories: 小程序
+toc: true
 ---
 
 题记：项目（Vue）是h5页面，主要用于公众号里面的活动，目的是增加公众号关注人数，达到推广的目的，其中涉及到获取用户的昵称、头像、unionid等基本信息。
