--- a/source/_posts/other/指数基金投资指南笔记一（概念及常见基金）.md
+++ b/source/_posts/other/指数基金投资指南笔记一（概念及常见基金）.md
@@ -2,9 +2,10 @@
 title: 指数基金投资指南笔记一（概念及常见基金）
 date: 2020-07-06 15:14:06
 categories: 随笔
+toc: true
 ---
 
-投资指数基金的核心：**用价值投资的理念挑选出值得投资的指数基金，再用定投的方式去投资它**
+投资指数基金的核心：**用价值投资的理念挑选出值得投资的指数基金，再用定投的方式去投资它。**
 
 价格与价值的关系、能力圈，以及安全边际：
 1. 价格与价值的关系：股票有其内在价值，股票的价格围绕其内在价值上下波动。
@@ -49,7 +50,7 @@ categories: 随笔
 > 创业板相关的指数有两个，一个是创业板综指，另一个是创业板指数。创业板综指是为了衡量创业板所有上市公司的股价平均表现而设立的，代码是399102。它包括创业板全部的500多家企业。而创业板指数是为了衡量创业板最主要的100家企业的平均表现而设立的，代码是399006。创业板指数限制了成份股的数量，只从创业板上市公司中，挑选出规模最大、流动性最好的100只股票。
 
 特点：
-1. 创业板指数整体公司规模较小，属于以中小型公司为主的指数。并且这些公司大多盈利没有进入稳定期，所以创业板的整体盈利数字比较 低;公司开展新业务也更容易导致盈利大起大落。小公司+盈利没有进入稳定期，创业板指数相比之前介绍的指数，更容易暴涨暴跌，投资时要有心理准备。
+1. 创业板指数整体公司规模较小，属于以中小型公司为主的指数。并且这些公司大多盈利没有进入稳定期，所以创业板的整体盈利数字比较 低；公司开展新业务也更容易导致盈利大起大落。小公司+盈利没有进入稳定期，创业板指数相比之前介绍的指数，更容易暴涨暴跌，投资时要有心理准备。
 
 #### 红利指数
 > 我们都知道股票是会发放股息的，也就是现金分红业绩比较好的公司，会每年从净利润中拿出一部分，以现金分红的形式回馈股东。这就是股票的现金分红，也叫股息。有研究表明，能实现高现金分红的股票，长期持有的平均收益率高于现金分红低的股票。这也很好理解，因为能够长期发放高现金分红，至少就能够说明企业的盈利和财务状况良好。所以我们可以通过持有几十只现金分红最高的股票，来获取更高的 收益。这就是红利指数的来源。
@@ -150,7 +151,7 @@ categories: 随笔
 
 ### 什么是市值加权、策略加权?
 市值加权比较好理解，就是股票规模越大，权重越高。
-例如一只指数包含50只股票，总市值2万亿，其中有一只市值1 000亿，另一只800亿。那1000亿市值的股票，在这个指数中占比就是5%;而800亿的股票，在这个指数中占比就是4%。这个4%、5%就是权重，这就是市值加权。
+例如一只指数包含50只股票，总市值2万亿，其中有一只市值1 000亿，另一只800亿。那1000亿市值的股票，在这个指数中占比就是5%；而800亿的股票，在这个指数中占比就是4%。这个4%、5%就是权重，这就是市值加权。
 
 而策略加权，则是按照别的方式来决定个股权重。
 例如红利指数，就是按照股息率来决定权重，哪个股票的股息率越高，这个股票的权重就越大。所以有的股票市值规模虽然小，但股息率高，可能在红利指数中占比反而更高一些。
@@ -166,5 +167,52 @@ categories: 随笔
 
 不过，等权重指数也有缺点，就是流动性比较差，它的流动性取决于流动性最差的那个成份股。所以等权重指数基金的规模天生受限，主要是一些小型指数基金采用。
 
-#### 什么是港股通?
+### 什么是港股通?
 港股通是互联互通的一部分，也是中国金融业的一次大创新。在港股通之前，境外投资者很难直接投资A股市场，内地投资者想要走出去也困难重重。港股通于2014年成立，开通港股通后，个人投资者可以很方便地投 资中国香港股票市场的股票。港股通初期以恒生指数和恒生中国企业指 数的成份股为主，因为这些指数的成份股相对可靠，遇到风险的概率较小，后期也逐渐扩展到香港中小盘股。基金公司也通过港股通，成立了很多投资中国香港股票市场的基金品种。
+
+
+### 常见的估值指标
+1. 市盈率（公司市值/公司盈利，即 PE=P/E，其中P代表公司市值，E代表公司盈利）
+> 市盈率背后的信息：
+> 1. 市盈率反映了我们愿意为获取1元的净利润付出多少代价。
+>    例如某个公司的市盈率是10，就代表我们愿意为这个公司的1元盈利付出10元。
+> 2. 估算市值。
+>    一个公司一年赚100亿元净利润，市盈率是10，其市值就是1000亿元。
+> 3. 市盈率的适用范围:流通性好、盈利稳定的品种。
+>    应用市盈率的前提
+>     1. 流通性好
+>     2. 盈利稳定
+
+2. 盈利收益率
+> 盈利收益率是市盈率的变种。市盈率是用公司市值除以盈利，而盈利收益率则是用公司盈利除以公司市值。也就是盈利收益率=E/P。它所代表的意义是，假如我们把一家公司全部买下来，这家公司一年的盈利能够带给我们的收益率，就是盈利收益率。
+> 	
+> 盈利收益率也是有适用条件的，市盈率所要求的流通性好、盈利稳定，盈利收益率也同样要求。
+
+3. 市净率
+> 市净率指的是每股股价与每股净资产的比率，也就是我们说的账面价值。市净率的定义是：PB=P/B(其中P代表公司市值，B代表公司净资产)。 
+> 
+> 影响市净率的因素有哪些?
+> 1. 企业运作资产的效率：ROE（净利润 / 净资产），ROE越高的企业，资产运作效率越高，市净率也就越高。
+> 2. 资产的价值稳定性。资产价值越稳定，市净率的有效性越高。
+> 3. 无形资产。
+> 4. 负债大增或亏损。
+> 
+> 当企业的资产大多是比较容易衡量价值的有 形资产，并且是长期保值的资产时，比较适合用市净率来估值。比如 前文介绍的强周期性行业的指数基金，它们的盈利不稳定或盈利呈周期 性变化，因此市盈率和盈利收益率都无法用在它们上面，但可以用市净 率来估值。像证券、航空、航运、能源等都很适合用市净率估值。
+
+4. 股息率
+> 股息，是投资者在不减少所持有的股权资产的前提下，仍然可以直接分享企业业绩增长的最佳方式。我们都知道，有的股票是会分红的。如果我们用过去一年，公司的现金分红除以公司的市值，得到的就是股息率了。股息率衡量的，就是现金分红的收益率。
+
+### 股息率、分红率
+股息率、分红率这两个概念很像，但实际上是不同的。分红率也叫 作派息率、分红比例。
+
+简单来说，股息率是企业过去一年的现金派息额除以公司的总市值，而分红率是企业过去一年的现金派息额除以公司的总净利润。这两 个比率，分子一样，但是分母一个是公司市值，一个是公司当年净利润。(当然细节上还有一些不同，例如分红还要扣税等，但大体上可以 这么理解。)
+
+分红率一般是公司预先就设置好了，并且连续多年都不会有什么改变。而股息率则会随着股价波动：股价越低，股息率就越高。
+
+股息率和盈利收益率之间有很大的关系。股息率=股息/市值，而盈利收益率=盈利/市值，分红率=股息/盈利，所以股息率=盈利收益 率*分红率。分红率往往在很长时间里都不会变。所以对同一个指数来说，往往盈利收益率高的时候，也是股息率高的时候。这就是盈利收益率与股息率之间的关系。
+
+我们发现绝大多数指数基金，假如选择在盈利收益率高的时候开始定投，长期收益会相当不错；反之如果在盈利收益率低的时候开始定投，长期收益会很一般。
+
+有三个因素直接影响了我们投资指数基金的收益：第一个是初始投资时刻指数基金的股息率，它影响了我们的分红收益；第二个是投资期内指数基金的市盈率变化；第三个是投资期内指数基金的盈利增长率；最后这两项影响我们的资本利得收益。
+
+*指数基金未来的年复合收益率，等于指数基金的投资初期股息率，加上指数基金每年的市盈率变化率，再加上指数基金的每年的盈利变化率。*
