--- a/source/_posts/other/指数基金投资指南笔记二（开始定投）.md
+++ b/source/_posts/other/指数基金投资指南笔记二（开始定投）.md
@@ -2,60 +2,19 @@
 title: 指数基金投资指南笔记二（开始定投）
 date: 2020-07-06 15:15:06
 categories: 随笔
+mathjax: true
+toc: true
 ---
 
-## 常见的估值指标
-1. 市盈率（公司市值/公司盈利，即 PE=P/E，其中P代表公司市值，E代表公司盈利）
-> 市盈率背后的信息：
-> 1. 市盈率反映了我们愿意为获取1元的净利润付出多少代价。
->    例如某个公司的市盈率是10，就代表我们愿意为这个公司的1元盈利付出10元。
-> 2. 估算市值。
->    一个公司一年赚100亿元净利润，市盈率是10，其市值就是1000亿元。
-> 3. 市盈率的适用范围:流通性好、盈利稳定的品种。
->    应用市盈率的前提
->     1. 流通性好
->     2. 盈利稳定
-
-2. 盈利收益率
-> 盈利收益率是市盈率的变种。市盈率是用公司市值除以盈利，而盈利收益率则是用公司盈利除以公司市值。也就是盈利收益率=E/P。它所代表的意义是，假如我们把一家公司全部买下来，这家公司一年的盈利能够带给我们的收益率，就是盈利收益率。
-> 	
-> 盈利收益率也是有适用条件的，市盈率所要求的流通性好、盈利稳定，盈利收益率也同样要求。
-
-3. 市净率
-> 市净率指的是每股股价与每股净资产的比率，也就是我们说的账面价值。市净率的定义是：PB=P/B(其中P代表公司市值，B代表公司净资产)。 
-> 
-> 影响市净率的因素有哪些?
-> 1. 企业运作资产的效率：ROE（净利润 / 净资产），ROE越高的企业，资产运作效率越高，市净率也就越高。
-> 2. 资产的价值稳定性。资产价值越稳定，市净率的有效性越高。
-> 3. 无形资产。
-> 4. 负债大增或亏损。
-> 
-> 当企业的资产大多是比较容易衡量价值的有 形资产，并且是长期保值的资产时，比较适合用市净率来估值。比如 前文介绍的强周期性行业的指数基金，它们的盈利不稳定或盈利呈周期 性变化，因此市盈率和盈利收益率都无法用在它们上面，但可以用市净 率来估值。像证券、航空、航运、能源等都很适合用市净率估值。
-
-4. 股息率
-> 股息，是投资者在不减少所持有的股权资产的前提下，仍然可以直接分享企业业绩增长的最佳方式。我们都知道，有的股票是会分红的。 如果我们用过去一年，公司的现金分红除以公司的市值，得到的就是股息率了。股息率衡量的，就是现金分红的收益率。
-
-### 股息率、分红率
-股息率、分红率这两个概念很像，但实际上是不同的。分红率也叫 作派息率、分红比例。
-
-简单来说，股息率是企业过去一年的现金派息额除以公司的总市值，而分红率是企业过去一年的现金派息额除以公司的总净利润。这两 个比率，分子一样，但是分母一个是公司市值，一个是公司当年净利润。(当然细节上还有一些不同，例如分红还要扣税等，但大体上可以 这么理解。)
-分红率一般是公司预先就设置好了，并且连续多年都不会有什么改变。而股息率则会随着股价波动：股价越低，股息率就越高。
-股息率和盈利收益率之间有很大的关系。股息率=股息/市值，而 盈利收益率=盈利/市值，分红率=股息/盈利，所以股息率=盈利收益 率*分红率。分红率往往在很长时间里都不会变。所以对同一个指数来 说，往往盈利收益率高的时候，也是股息率高的时候。这就是盈利收益 率与股息率之间的关系。
-
-我们发现绝大多数指数基金，假如选择在盈 利收益率高的时候开始定投，长期收益会相当不错;反之如果在盈利收 益率低的时候开始定投，长期收益会很一般。
+## 定投的策略
 
 *当盈利收益率大于10%时，开始定投。当盈利收益率低于6.4%时，暂停定投。*
 
-我们使用盈利收益率来定投指数基金的策略是:
+我们使用盈利收益率来定投指数基金的策略是：
 * 当盈利收益率大于10%时，分批投资。
 * 盈利收益率小于10%，但大于6.4%时，坚定持有已经买入的基 金份额。
 * 当盈利收益率小于6.4%时，分批卖出基金。
 （只适合于流通性比较好、盈利比较稳定的品种。国内主要是上证红利、中证红利、上 证50、基本面50、上证50AH优选、央视50、恒生指数和恒生中国企业 指数等。）
-
-有三个因素直接影响了我们投资指数基金的收益：第一个是初始投资时刻指数基金的股息率，它影响了我们的分红收益；第二个是投资期内指数基金的市盈率变化；第三个是投资期内指数基金的盈利增长率；最后这两项影响我们的资本利得收益。
-
-*指数基金未来的年复合收益率，等于指数基金的投资初期股息率， 加上指数基金每年的市盈率变化率，再加上指数基金的每年的盈利变化 率。*
-
 
 盈利收益率法 + 定投：
 - 在盈利收益率大于10%的时候坚持定投。
@@ -67,6 +26,34 @@ categories: 随笔
 - 市盈率市净率进入正常估值，暂停定投，继续持有；可以定投其他处于底部区域的品种。
 - 当市盈率市净率进入历史较高区域的时候卖出。
 
-## 定投的实操步骤
-定投指数基金，按照操作渠道的不同，可以分为场内渠道和场外渠道。场内渠道主要是通过股票交易软件来进行，而场外渠道则分为银行、基金公司和互联网基金平台三类。
+## 定期不定额
 
+### 定期不定额：盈利收益率法
+用盈 利收益率来估值的指数基金，它的盈利收益率越高，投资价值就越高，越值得投资。所以我们可以在盈利收益率高的时候，多投入一些。
+
+以盈利收益率首次达到10%以上(首次达到低估标准)时的投资金 额为基准。之后每个月定投的金额，可以根据下列公式来计算:
+
+$$ 当月的定投金额 = 首次低估时的定投资金 * (\frac{当月的盈利收益率}{首次的盈利收益率})^{n} $$
+
+来看个例子。假设我们从盈利收益率达到10%的时候开始定投，初 始定投的金额为每月1 000元，n为1。这样到了第二个月，我们发现盈利收益率达到12.5%了，指数基金投资价值变高了，我们应该多投入一些资金。
+
+使用定期不定额公式来计算：
+
+$$ 当月的定投金额 = 1000 * (\frac{12.5 %}{10 %})^{1} $$
+
+也就是说，这个月的定投金额为1 250元，比初始的1 000元要高一些。这样我们就做到盈利收益率越高，买入越多了。用这种定期不定额的投资方式，可以帮助我们在相对低估的时候买入更多，相应地，在估值稍高的时候则会买入更少。
+
+### 定期不定额：博格公式法
+博格公式使用的数据是市盈率，当市盈率越小的时候，指数基金的投资价值越大；博格公式的变种使用的数据是市净率，市净率越小的时候，指数基金的投资价值越大。
+
+所以使用博格公式进行投资时，每月定投的金额可以用以下的公式这样来计算：
+
+$$ 当月的定投金额 = 首次低估时的定投资金 * (\frac{首次的市盈率}{当月的市盈率})^{n} $$
+
+所以使用博格公式的变种进行投资时，每月定投的金额可以用以下的公式这样来计算：
+
+$$ 当月的定投金额 = 首次低估时的定投资金 * (\frac{首次的市净率}{当月的市净率})^{n} $$
+
+在这些公式里都有一个n，它就是定投收益的放大器，对进一步提升我们定投的收益，起着很重要的作用。所谓放大，很好理解，即 n 越大，收益会相对越高。只要普通定期定额的定投是盈利的，那么 n 就能放大我们的收益。
+
+定投放大器n，能够放大我们的投资收益，但是对资金的需求量会随着n的增大而越来越高，而且这种增高是呈几何倍数增长的。n的数值越大，当指数基金越低估时，要求投入的资金量就越多，因此投资者要量力而行，设置适合自己的放大器，根据自己能够承 受的资金额度来设定n的取值。从我的经验来看，设置n=1，效果就已 经不错了。有条件的、资金比较多的朋友，可以设置n=2，也就足够了。
