--- a/source/_posts/other/指数基金投资指南笔记一（概念及常见基金）.md
+++ b/source/_posts/other/指数基金投资指南笔记一（概念及常见基金）.md
@@ -18,11 +18,18 @@ toc: true
 指数是一个选股规则，它的目的是按照某个规则挑选出一篮子股票，并反映这一篮子股票的平均价格走势。指数基金追踪指数，完全按照指数的选股规则去买入完全一样的一篮子股票。指数基金有三个独特的好处：长生不老、长期上涨、成本低。指数基金是最适合普通投资者的投资品种。
 
 ## 指数基金的分类
-按投资的行业上区分，指数基金可以分为宽基和行业指数基金：
-- 常见宽基指数基金
+1. 按投资的行业上区分，指数基金可以分为宽基和行业指数基金：
+- 常见宽基指数基金（指数在挑选股票的时候，并不限制投资哪些行业）
 上证50、沪深300、中证500、创业 板、红利、基本面、央视50、恒生、H股、上证50AH优选、纳斯达克 100、标普500等。
-- 常见的行业指数基金
+- 常见的行业指数基金（指数在挑选股票的时候，会要求只投资 哪些行业的股票）
 必需消费行业的指数基金、医药行业的指数基金、可选消费行业的指数基金、养老产业的指数基金、 银行业的指数基金、证券业的指数基金、保险行业的指数基金、金融行业的指数基金、地产行业的指数基金等。
+
+2. 按照投资方向，基金可以分为：股票基金、债券基金、混合基金、货币基金。
+3. 按照投资理念，基金可以分为：主动型基金（基金经理来选择股票，并且决定股票的买入卖出）、被动型基金（其基金经理不参与选股，而是根据某一个既定的规则来挑选股票、买入卖出）。
+4. 按照销售渠道，基金可以分为：场内基金、场外基金。
+5. 按照募集对象，基金可以分为：公募基金、私募基金。
+6. 按照基金是否开放，基金可以分为：开放式基金，封闭式基金。
+
 
 ### 宽基指数基
 
