--- a/source/_posts/fund/指数基金投资指南笔记二（开始定投）.md
+++ b/source/_posts/fund/指数基金投资指南笔记二（开始定投）.md
@@ -16,12 +16,12 @@ toc: true
 * 当盈利收益率小于6.4%时，分批卖出基金。
 （只适合于流通性比较好、盈利比较稳定的品种。国内主要是上证红利、中证红利、上 证50、基本面50、上证50AH优选、央视50、恒生指数和恒生中国企业 指数等。）
 
-盈利收益率法 + 定投：
+盈利收益率法 + 定投（盈利稳定增长）：
 - 在盈利收益率大于10%的时候坚持定投。
 - 盈利收益率小于10%，大于6.4%的时候暂停定投，继续持有; 可以定投其他盈利收益率大于10%的品种。
 - 盈利收益率小于6.4%的时候卖出。
 
-博格公式法 + 定投。
+博格公式法 + 定投（盈利快速增长）：
 - 在市盈率或市净率处于历史底部区域的时候坚持定投。
 - 市盈率市净率进入正常估值，暂停定投，继续持有；可以定投其他处于底部区域的品种。
 - 当市盈率市净率进入历史较高区域的时候卖出。
