update: book list

--- a/source/_posts/other/2020Flag.md
+++ b/source/_posts/other/2020Flag.md
@@ -5,28 +5,57 @@ categories: 随笔
 toc: true
 ---
 
-## 工作
-1. Icon 独立为项目（React、Vue）各一份、便于代码复用   DDL：2020-04-30
-2. 看技术书籍、设计书籍、产品书籍   DDL：2020-12-31 一个月一本
-  1. 技术书籍：
-    1. 计算机网络
-    2. 软件工程
-  2. 设计书籍：
-    1. 写给大家看的设计书
-    2. 简约至上
-    3. dont make me think
-    4. 点石成金
-  3. 产品书籍：
-    1. 《幕后产品》王诗沐
-    2. 《有效需求分析》徐锋
-3. 学习 TypeScript 并能有配套练习项目   DDL：2020-06-30
-4. 学习Node.js 后台并能有配套练习项目   DDL：2020-12-31，2020-06-30 完成 70%
-5. 学习MySQL、redis、MongoDB并能有配套练习项目   DDL：2020-12-31，2020-06-30 完成 70%
+## 也与项目
+- [x] Icon 独立为项目（React、Vue）各一份、便于代码复用   DDL：2020-04-30
+- [x] 学习 TypeScript 并能有配套练习项目   DDL：2020-06-30
+- [x] 学习 Node.js 后台并能有配套练习项目   DDL：2020-12-31，2020-06-30 完成 70%
+- [x] 学习 MySQL 并能有配套练习项目   DDL：2020-12-31，2020-06-30 完成 70%
+
+## 阅读
+技术书籍、设计书籍、产品书籍，DDL：2020-12-31 一个月一本
+
+计算机
+
+- [x] Node.js高级编程
+- [ ] 了不起的 Nodejs 将 JavaScript 进行到底
+- [ ] CSS世界
+- [ ] 计算机网络
+- [ ] 软件工程
+- [ ] WebAssembly标准入门
+- [ ] Linux+Shell编程从入门到精通（第2版）
+
+设计
+
+- [ ] 写给大家看的设计书
+- [ ] 简约至上
+- [ ] dont make me think
+- [ ] 点石成金
+
+产品
+
+- [ ] 《幕后产品》王诗沐
+- [ ] 《有效需求分析》徐锋
+
+理财
+
+- [x] 指数基金投资指南
+- [x] 定投十年财务自由-银行螺丝钉
+- [ ] 理财不用懂太多
+- [ ] 买基金为自己加薪
+- [ ] 手把手教你读财报 唐朝
+- [ ] 投资第一课
+- [ ] 期权期货及其他衍生产品第七版本
+- [ ] 一个投资家的20年
+
+其他
+
+- [ ] 图解物联网
+
 
 ## 其他
-1. 搭建自己的GitHub Pages博客
-2. 练字，达到字迹美观工整、笔力苍劲
-3. 读一些哲学方面的书
-4. 健身，年中能有8块腹肌
-5. 学英语，单词量20000，不看字母能听懂英文电影
-6. 学习理财相关的知识，开始钱生钱
+- [x] 搭建自己的GitHub Pages博客
+- [ ] 练字，达到字迹美观工整、笔力苍劲
+- [ ] 读一些哲学方面的书
+- [ ] 健身，年中能有8块腹肌
+- [ ] 学英语，单词量20000，不看字母能听懂英文电影
+- [ ] 学习理财相关的知识，开始钱生钱
