update: add note

--- a/source/_posts/fund/买基金为自己加薪笔记.md
+++ b/source/_posts/fund/买基金为自己加薪笔记.md
@@ -13,3 +13,26 @@ mathjax: true
 如果 > 1，就代表基金风险大于整体市场；如果 < 0，就代表基金风险小于整体市场。例如，为 1.05，代表大盘涨跌幅为 1%，带动基金净值涨跌为 1.05%。
 3. 夏普指数：指的是每单位风险所带来的超额收益。
 简单来说，如果为 0，就代表每单位风险所带来的收益和银行定存相同；如果 > 0，就代表每单位风险所带来的收益优于银行定存；如果 < 0，就代表每单位风险所带来的收益不如银行定存。
+
+
+### 了解景气趋势-基本面
+1. 国内生产总值，国内生产总值常被作为衡量一国经济成果的指标，如果一个国家的经济成长率增幅递减，可以预期股市大概也不会有行情。
+2. 主要经济指标，可以预测未来6~9个月的经济活动，要观察连续3个月有无升降，如果升幅或者跌幅逐渐缩小，就代表趋势逆转。值得注意的是，当主要经济指标达到最低，或达到最高时，预测就会钝化，必须搭配其他经济指标一并观察。
+3. 美国采购经理指数，这是针对美国采购经理所作的调查，显示制造业的景气状况。当美国采购经理指数上升，代表美国对外采购金额增加，未来景气可望好转，反之则代表景气走弱。而当美国采购经理指数高于50，就代表景气扩张，低于50则是景气收缩期。
+4. 消费者物价指数，是衡量通货膨胀的重要指标。当消费者物价指数维持低位，中央银行会调低利率；消费者物价指数持续高位，中央银行则会调高利率。
+5. 美联储的态度，美联储在全球金融市场会结冻，影响了全球利率走势与资金流向，从2004年6月以来，美联储持续加息，为的就是要打击通货膨胀，美联储开会前市场的看法，乃至美联储发表的声明内容，都是重要观察指标。
+6. 消费者信心指数，其高低影响市场存货，特别是美国零售业占国内生产总值的60%，若存货居高不下，美国采购经理指数就跟着下滑。当消费者信心指数维持低于100时，代表景气低迷，若消费者信心指数持续下跌，则代表消费者对未来景气看法不乐观，消费意愿可能萎缩。不过，消费者信心指数在经济扩张期变化不大，景气低迷时，消费者信心指数对景气回升有关键影响。
+7. 工业生产与产能利用率，工业生产指数衡量主要工业的实质产出，产能利用率则是衡量厂商对设备的利用程度，当工业生产指数上升时，代表经济步调加速，但是增幅过高则可能是景气过热，投资须谨慎。至于产能利用率偏高则代表需求大于供给，厂商有调高价格的能力，提升获利，进一步提升投资意愿。
+
+### 判断进出场时点-技术面
+1. 季线走向
+
+    通常当季线持续向上时，表示中长期持续看好，反之，如果季线持续往下，表示中长期有疑虑，不过，要注意的是当季线往下时，股市通常已经下跌一阵了。
+
+2. KD值，用来判断实际进出场时间点。
+
+    KD值是利用周期中的最高价、最低价和收盘价来计算未来的随机值，50是强弱势的分水岭，80以上表示趋涨，20以下表示趋跌，K线代表快速动线，D线代表慢速动线，K值大于D值表示涨势，D值大于K值表示跌势。通常当K线穿越D线，产生黄金交叉时，我会加快布局；反之，若K线跌破D线、产生死亡交叉时，我会准备卖出持股。通常我会看周KD指标，再参考日KD跟月KD。原则上，只要大环境不差，低于20时我会大力买进，当K线穿越D线，产生黄金交叉后，只要还有筹码，我都还会持续买进，直到布局完成。等到KD值到达80的超涨区时，我会开始准备卖出，此时如果死亡交叉还没产生，就可以再等一下，等K线下弯时，我才会开始分批卖出，一旦出现死亡交叉，就是我出清手上持股的时候。
+    
+3. 搭配成交量的观察。
+
+    “量先价行”是股市里的至理名言，所以除了季线和KD值外，成交量也是观察重点，通常量缩价跌时，是进场的好时点，而“量价背离”时，则要小心市场有反转向下或持续下探的危险。
