update: add note

--- a/source/_posts/fund/买基金为自己加薪笔记.md
+++ b/source/_posts/fund/买基金为自己加薪笔记.md
@@ -36,3 +36,31 @@ mathjax: true
 3. 搭配成交量的观察。
 
     “量先价行”是股市里的至理名言，所以除了季线和KD值外，成交量也是观察重点，通常量缩价跌时，是进场的好时点，而“量价背离”时，则要小心市场有反转向下或持续下探的危险。
+    
+    
+### 基金投资 11 戒
+1. 赶流行
+2. 不论资产多寡，一律进行资产配置
+3. 崇尚品牌，只买同一家公司的基金
+4. 和基金浴血奋战，奖赏赔钱基金
+5. 惩罚让你赚钱的好基金
+6. 轻易牵手，又轻易分手
+7. 净值疑惑，对新基金莫名狂热
+8. 只买不卖
+9. 把基金当股票操作
+10. 赎回之后就让基金闲置
+11. 迷信明星基金经理人   
+ 
+### 基金投资 4 原则
+1. 勿以钱小而不存，节流为先
+2. 钱少不需要资产配置
+3. 增加自己的附加价值
+4. 随着年龄增长调整理财计划
+
+### 萧老师的投资心得
+1. 清出每月可扣款金额
+2. 获得第一步，挑出好基金
+3. 决定开户方式，小钱也要省
+4. 设定停利点，持续扣款，定期检视基金收益率
+5. 达到停利点，适时买回
+6. 获利金额滚入再投资
