--- a/source/_posts/other/2020Flag.md
+++ b/source/_posts/other/2020Flag.md
@@ -5,7 +5,7 @@ categories: 随笔
 toc: true
 ---
 
-## 也与项目
+## 业余项目
 - [x] Icon 独立为项目（React、Vue）各一份、便于代码复用   DDL：2020-04-30
 - [x] 学习 TypeScript 并能有配套练习项目   DDL：2020-06-30
 - [x] 学习 Node.js 后台并能有配套练习项目   DDL：2020-12-31，2020-06-30 完成 70%
@@ -17,19 +17,19 @@ toc: true
 计算机
 
 - [x] Node.js高级编程
-- [ ] 了不起的 Nodejs 将 JavaScript 进行到底
-- [ ] CSS世界
+- [ ] CSS世界<font color=#f40>（进行中）</font>
 - [ ] 计算机网络
 - [ ] 软件工程
-- [ ] WebAssembly标准入门
 - [ ] Linux+Shell编程从入门到精通（第2版）
+- [ ] 正则指引
 
 设计
 
+- [ ] 简约至上<font color=#f40>（进行中）</font>
 - [ ] 写给大家看的设计书
-- [ ] 简约至上
 - [ ] dont make me think
 - [ ] 点石成金
+- [ ] 启示录：打造用户喜爱的产品
 
 产品
 
@@ -40,8 +40,8 @@ toc: true
 
 - [x] 指数基金投资指南
 - [x] 定投十年财务自由-银行螺丝钉
+- [x] 买基金为自己加薪
 - [ ] 理财不用懂太多
-- [ ] 买基金为自己加薪
 - [ ] 手把手教你读财报 唐朝
 - [ ] 投资第一课
 - [ ] 期权期货及其他衍生产品第七版本
@@ -50,6 +50,23 @@ toc: true
 其他
 
 - [ ] 图解物联网
+- [ ] 创业维艰-如何完成比难更难的事
+- [ ] 大败局
+- [ ] 史蒂夫·乔布斯传
+- [ ] 史玉柱自述： 我的营销心得
+- [ ] 参与感
+- [ ] 创业小败局
+- [ ] 从0到1
+- [ ] 从为什么开始乔布斯让APPLE红遍世界的黄金圈法则
+- [ ] 海底捞你学不会
+- [ ] 黑客与画家
+- [ ] 基业长青珍藏版
+- [ ] 精益创业 美 埃里克 莱斯
+- [ ] 商业模式新生代
+- [ ] 商战
+- [ ] 原则
+- [ ] 重来_更为简单有效的商业思维 - 贾森•弗里德
+- [ ] 卓有成效的管理者
 
 
 ## 其他
