update: book list

--- a/source/_posts/other/2020Flag.md
+++ b/source/_posts/other/2020Flag.md
@@ -25,9 +25,9 @@ toc: true
 
 设计
 
-- [ ] 简约至上<font color=#f40>（进行中）</font>
+- [x] 简约至上<font color=#f40>（进行中）</font>
+- [ ] dont make me think<font color=#f40>（进行中）</font>
 - [ ] 写给大家看的设计书
-- [ ] dont make me think
 - [ ] 点石成金
 - [ ] 启示录：打造用户喜爱的产品
 
