--- a/source/_posts/fund/螺丝钉的投资类书单.md
+++ b/source/_posts/fund/螺丝钉的投资类书单.md
@@ -4,7 +4,7 @@ date: 2020-09-07 22:24:06
 categories: fund
 ---
 
-[螺丝钉的投资类书单](https://mp.weixin.qq.com/s/j3LYcVpX2kiCg2rJ-OA7bw)
+## [螺丝钉的投资类书单](https://mp.weixin.qq.com/s/j3LYcVpX2kiCg2rJ-OA7bw)
 
 1. [x] 指数基金投资指南
 2. [x] 定投十年财务自由-银行螺丝钉
@@ -43,4 +43,72 @@ categories: fund
 35. [ ] 低风险投资之路
 36. [ ] 可转债投资魔法书
 37. [ ] 分级基金与投资策略
+
+## 吴晓波推荐给年轻人的50本书
+### 第一部分    当商业开始改变世界
+1. [ ] 国富论：他发现了“看不见的手”<font color=#969896>（豆瓣 9.0）</font>
+2. [ ] 资本论：一本为革命而生的经济学宣言<font color=#969896>（豆瓣 8.6）</font>
+3. [ ] 新教伦理与资本主义精神：为商业编织“意义之网”<font color=#969896>（豆瓣 8.9）</font>
+4. [ ] 就业、利息和货币通论：重新定义“看得见的手”<font color=#969896>（豆瓣 8.7）</font>
+5. [ ] 通往奴役之路 ：他什么都不相信，除了自由<font color=#969896>（豆瓣 8.8）</font>
+6. [ ] 自由选择 ：经济学界有个“矮巨人”<font color=#969896>（豆瓣 8.9）</font>
+7. [ ] 经济学：“我写教科书，其他人拟定法律”<font color=#969896>（豆瓣 9.3）</font>
+8. [ ] 创新与企业家精神：一个“旁观者”的创新<font color=#969896>（豆瓣 8.9）</font>
+9. [ ] “竞争三部曲”：战略模型的设计大师（一）竞争战略<font color=#969896>（豆瓣 8.6）</font>
+10. [ ] “竞争三部曲”：战略模型的设计大师（二）竞争优势<font color=#969896>（豆瓣 8.7）</font>
+11. [ ] “竞争三部曲”：战略模型的设计大师（三）国家竞争优势<font color=#969896>（豆瓣 8.6）</font>
+12. [ ] 乌合之众：群众是如何被发动起来的<font color=#969896>（豆瓣 8.2）</font>
+
+### 第二部分    成长的策略与秘密
+1. [ ] 追求卓越：第一本卖过千万册的商业图书<font color=#969896>（豆瓣 7.7）</font>
+2. [ ] 基业长青：伟大的创业者都是“造钟”人<font color=#969896>（豆瓣 8.2）</font>
+3. [ ] 营销管理：营销学最后的大师<font color=#969896>（豆瓣 9.0）</font>
+4. [ ] 第五项修炼 ：席卷全球的学习型组织热<font color=#969896>（豆瓣 8.7）</font>
+5. [ ] 隐形冠军 ：默默无闻的小巨人<font color=#969896>（豆瓣 7.7）</font>
+6. [ ] 定位：“有史以来对营销影响最大的观念”<font color=#969896>（豆瓣 8.2）</font>
+7. [ ] 创新者的窘境：管理越好的公司越容易失败<font color=#969896>（豆瓣 8.5）</font>
+8. [ ] 长尾理论：尾巴决定商业的未来<font color=#969896>（豆瓣 7.7）</font>
+9. [ ] 引爆流行：如何找到那个引爆点<font color=#969896>（豆瓣 8.0）</font>
+
+### 第三部分    动荡年代与潮汐的方向
+1. [ ] 萧条经济学的回归和2008年经济危机：最喜欢说“不”的经济学家<font color=#969896>（豆瓣 8.6）</font>
+2. [ ] 非理性繁荣：大股灾烧出的超级明星<font color=#969896>（豆瓣 8.1）</font>
+3. [ ] 政府为什么干预经济：为“守夜人”划定边界<font color=#969896>（豆瓣 8.0）</font>
+4. [ ] 21世纪资本论：让公平重新回到辩论的中心<font color=#969896>（豆瓣 7.7）</font>
+5. [ ] 美国大城市的死与生：家庭主妇对城市的抗议<font color=#969896>（豆瓣 8.6）</font>
+6. [ ] 第三次浪潮：他把新世界的地图徐徐展开<font color=#969896>（豆瓣 8.4）</font>
+7. [ ] 失控：互联网世界的“预言帝”<font color=#969896>（豆瓣 8.7）</font>
+8. [ ] 奇点临近 ：机器什么时候战胜人类<font color=#969896>（豆瓣 7.6）</font>
+9. [ ] 世界是平的：一组动听的全球化赞歌<font color=#969896>（豆瓣 7.6）</font>
+10. [ ] 未来简史 ：99% 的人将成无用之人？<font color=#969896>（豆瓣 8.4）</font>
+
+### 第四部分　　无法终结的历史与思想
+1. [ ] 旧制度与大革命：如何攻陷内心的巴士底狱<font color=#969896>（豆瓣 8.9）</font>
+2. [ ] “年代四部曲”：一位欧洲共产党员的历史书写（一）革命的年代：1789～1848<font color=#969896>（豆瓣 8.5）</font>
+3. [ ] “年代四部曲”：一位欧洲共产党员的历史书写（二）资本的年代：1848～1875<font color=#969896>（豆瓣 8.6）</font>
+4. [ ] “年代四部曲”：一位欧洲共产党员的历史书写（三）帝国的年代：1875～1914<font color=#969896>（豆瓣 8.4）</font>
+5. [ ] “年代四部曲”：一位欧洲共产党员的历史书写（四）极端的年代：1914～1991<font color=#969896>（豆瓣 8.7）</font>
+5. [ ] 巨人 ：发明了“中美国”概念的英国人<font color=#969896>（豆瓣 7.1）</font>
+6. [ ] 历史的终结与最后的人 ：一个走不出去的“福山困境”<font color=#969896>（豆瓣 8.5）</font>
+7. [ ] 大国的兴衰：500 年视野里的美国与中国<font color=#969896>（豆瓣 8.2）</font>
+8. [ ] 枪炮、病菌与钢铁 ：一本有趣的文明进化简史<font color=#969896>（豆瓣 8.7）</font>
+
+### 第五部分　　企业家书写的传奇
+1. [ ] 影响历史的商业七巨头：为了到达顶峰，你不需要什么门票<font color=#969896>（豆瓣 7.7）</font>
+2. [ ] 谁说大象不能跳舞？：一个做饼干的如何拯救“蓝色巨人”<font color=#969896>（豆瓣 7.8）</font>
+3. [ ] 只有偏执狂才能生存：他穿越了死亡之谷<font color=#969896>（豆瓣 7.6）</font>
+4. [ ] 杰克·韦尔奇自传：“全球第一CEO”养成记<font color=#969896>（豆瓣 7.8）</font>
+5. [ ] 巴菲特致股东的信：那个种植“时间的玫瑰”的人<font color=#969896>（豆瓣 8.2）</font>
+6. [ ] 史蒂夫·乔布斯传 ：生来只是为了改变世界<font color=#969896>（豆瓣 8.7）</font>
+7. [ ] 活法：“敬天爱人”的日本商业哲学<font color=#969896>（豆瓣 8.1）</font>
+
+### 第六部分　　谁来讲述中国事
+1. [ ] 江村经济：用脚写出来的中国模式<font color=#969896>（豆瓣 9.0）</font>
+2. [ ] 美国与中国：费正清的眼睛<font color=#969896>（豆瓣 8.5）</font>
+3. [ ] 大分流：如果世界结束于 1820 年<font color=#969896>（豆瓣 7.6）</font>
+4. [ ] 万历十五年：一位少校军官的“大历史”<font color=#969896>（豆瓣 8.9）</font>
+5. [ ] 论中国 ：一位 85 次访华的政治家<font color=#969896>（豆瓣 8.6）</font>
+6. [ ] 当代中国经济改革：中国正在过大关<font color=#969896>（豆瓣 9.7）</font>
+7. [ ] 中国的经济制度 ：乱发狂生的错过与得到<font color=#969896>（豆瓣 8.0）</font>
+8. [ ] 激荡三十年：为当代中国企业立传<font color=#969896>（豆瓣 8.6）</font>
 
