update book list

--- a/source/_posts/other/2020Flag.md
+++ b/source/_posts/other/2020Flag.md
@@ -25,8 +25,8 @@ toc: true
 
 设计
 
-- [x] 简约至上<font color=#f40>（进行中）</font>
-- [ ] dont make me think<font color=#f40>（进行中）</font>
+- [x] 简约至上
+- [x] dont make me think
 - [ ] 写给大家看的设计书
 - [ ] 点石成金
 - [ ] 启示录：打造用户喜爱的产品
@@ -49,6 +49,7 @@ toc: true
 
 其他
 
+- [ ] 区块链技术指南
 - [ ] 图解物联网
 - [ ] 创业维艰-如何完成比难更难的事
 - [ ] 大败局
