--- a/source/_posts/fund/螺丝钉的投资类书单.md
+++ b/source/_posts/fund/螺丝钉的投资类书单.md
@@ -4,6 +4,27 @@ date: 2020-09-07 22:24:06
 categories: fund
 ---
 
+## 经典的投资书籍
+1. [ ] 聪明的投资者
+2. [ ] 证券分析
+3. [ ] 巴菲特致股东的信
+4. [ ] 滚雪球
+5. [ ] 穷查理宝典
+6. [ ] 文明、现代化、价值投资与中国
+7. [ ] 彼得林奇的成功投资
+8. [ ] 共同基金常识
+9. [ ] 股市真规则
+10. [ ] 投资中最重要的事
+11. [ ] 机构投资的创新之路
+12. [ ] 原则
+13. [ ] 商业模式新生代、商业模式新生代（个人篇）
+14. [ ] 投资与养老
+15. [ ] 憨夺型投资者
+16. [ ] 大钱细思
+17. [ ] 非理性繁荣
+18. [ ] 助推
+19. [ ] 思考，快与慢
+
 ## [螺丝钉的投资类书单](https://mp.weixin.qq.com/s/j3LYcVpX2kiCg2rJ-OA7bw)
 
 1. [x] 指数基金投资指南
