--- a/source/_posts/fund/理财不用懂太多笔记.md
+++ b/source/_posts/fund/理财不用懂太多笔记.md
@@ -2,6 +2,7 @@
 title: 理财不用懂太多笔记
 date: 2020-11-12 18:24:06
 categories: fund
+toc: true
 ---
 
 ### 货币基金的两个名词：
@@ -33,3 +34,64 @@ categories: fund
 查看货币基金的财务报表，并试着理解其中的内容。
 
 坚持不懂的不做
+
+## 股票
+
+### 指数型基金
+
+资本市场上有不少“地雷”和“陷阱”，即使投资能力很强也难免中招。指数有一个好处，就是它的样本量大。一个指数中所包含的股票数量，少则几十只，多则数百上千只。这些上市公司有好也有坏，最终好坏相互抵消，得到一个平均水平。
+
+如果我们想要超越平均水平呢?其实也很简单。这里用到我们之前说的两根温度计-----PE、PB。我们统计各类指数十年以上的运行情况，看看各个阶段它们的PE、PB是多少。最好选择有十年以上历史可追溯的指数，如上证指数、深证成指、恒生指数等。我们在时间轴上把各PE、PB的值连起来，这样高点和低点就一目了然。只要选择在PE、PB处于历史低位的时候投资指数，得到的收益率自然就能超越平均水平。
+
+综合统计国内外各大主要指数的历史情况，当PE低于10倍时处于低估区域，20倍以上则为高估区域，中间为正常区域。这一点从实行注册制的美股、港股市场看得更清楚。A股由于之前实行审核制，供应量跟不上需求，所以曾经很长时间处于高估的位置。
+
+### 低估分散策略
+除了指数投资，我们还可以采取另一种策略来实现“傻瓜式投资”。这种策略需要我们资金量稍微多一点，40万元以上较为合适。资金太少则难以分散持股，且交易费率较高。与此同时，还需要稍微了解-点财务知识，会通过财务报表自行计算PE、PB。
+
+我们首先通过一些财经网站或者行情软件，筛选出一篮子低PE、低PB的个股。然后逐一阅读财务报表，核算出它们的PE、PB值，剔除一些PE、PB被扭曲的情况（如非经常性损益等），并将结果记录下来@。最后，我们在各个行业中分散地选择低可在上交所网站查询行业分类信息，如表16-1：PE、低PB的个股，买入并持有。因为股价是变动的，所以我们还需要按月审查，如果出现更低估的标的，则进行换股。
+
+股票的估值低，有可能是因为处于夕阳行业，前景不被看好；又或者是周期性行业，利润处于顶峰时期（好得不能再好，未来就只能下降了）。所以我们需要将投资标的分散到不同的行业中去。但总体来说，低估值更多是出自投资者的悲观情绪i。对于低估的股票而言，因为预期不高，所以只要业绩稍有改善，股价介就可能上涨。反观许多高估值的“成长股”，多多少少有泡沫成分，即使业绩维持高增长，只要增长幅度不如市场预期的那么高，股价也可能下跌。
+
+## 基金和信托
+
+对于投资人来说，基金就是把钱交给专业财经人士打理。基金管理公司收取一定的费用，如管理费、申赎费等。扣除这些费用后，不论是赔是赚，均由基金投资人承担。公募基金品类繁多，数量比股票还多（2015年初超越）。2015年共发行了800多只基金，截至年底公募基金的总规模达到8.4万亿元（但货基占了半壁江山）。对大多数人来说，挑选一款适合自己的基金并不容易。我们普通大众能接触到的基金，被称为“公募基金”。它的特点是可以公开宣传，公开募集发行，投资门槛低，由某某基金公司发行①此外还有面向高净值人士的私募基金，特点是不能公开宣传，只能面向少数特定人群，认购门槛高（不低于100万），一般由某某资产管理公司发行。在公募基金这个大框框里，又分很多类别，我们来看一看。
+
+### 投资范围
+
+基金可以投资的范围很广，除了前面提到的货币基金外，还可以是股票（股票型基金）、债券（债券型基金）、股债混合（混合型基金）、大宗商品（如石油、贵金属等）、房地产（REIs）等，甚至还有投资基金的基金（FOF）。根据最新的《公开募集证券投资基金运作管理办法》②，股票型基金投资股票的最低仓位不得低于80%，这意味着如果遭遇股市崩盘，股票型基金只能硬扛，无法将仓位降低至80%以下。同样，债券型基金投资债券的最低仓位不得低于80%。但不要因为“债券”二字就认为其“风险低”。首先，债券型基金通常用正回购等方式加杠杆买债券，短融长投，因而受到的利率风险较大;其次，债券型基金既可以配置较多的可转债（股性较重），也能够买一小部分股票。至于混合型基金，投资仓位灵活得多，不受限制。关于基金仓位要求的具体情况，可
+以在招募说明书中找到。根据投资范围，还可以更细致地分类，如专门投资短期债券的短融债基金，专门投资大盘蓝筹股的股票型基金等。投资人可以根据自己的需要去选择合适的基金。
+
+### 申赎及交易方式
+
+基金按能否进行申赎，可分为封闭式基金和开放式基金。同时根据其是否能够在交易所买卖，又分为可交易型基金和不可交易型基金。封闭式基金在募集完毕后的“封闭期”内，不能进行申购和赎回即基金的份额总数不变。许多封闭式基金不能申赎，但可以在证券交易所买卖。由于封闭式基金不能按净值赎回，而其中的股票型基金又有仓位限制，所以当股市低迷时便少有人愿意接手（买入），交易价格相对净值出现大幅折价。2005年熊市底部，甚至出现了不少打半价的封闭式基金。封闭期结束后，一般的处理方法是转为开放式基金，或对基金清算返还资金（这个很少）。随着早期的封闭式基金陆续到期，目前市场上的封闭式基金数量很少。大部分新基金均开放申赎。开放式基金允许申赎的日期即为“开放日”，一般的证券交易日都是开放日，但有些基金也常常暂停申赎，如QD外汇额度耗尽，又如一些基金申购额太多，难以完成资产配置（之前的打新基金），具体情况留意基金的公告。
+
+封闭式基金一般都能在交易所买卖（少量除外），但并不是所有的开放式基金都能交易，其中可交易的又称为LOF，或ETF等。此类基金可以按照净值赎回，所以其交易价格不会偏离净值太多，否则就会有套利资金介入。
+
+### 场内基金与场外基金
+通常说的“场内”指的是上海和深圳两个交易所之内。我们除了利用炒股软件申赎和交易基金，还可以通过银行、基金公司官网，甚至淘宝、天天基金网、陆金所等其他平台进行申赎，这些申赎渠道都称为“场外”。同一只基金，既可以在场内申赎和交易，也可以在场外申赎（但不能交易）。当然也有一些基金只在场内，或只在场外。对于在场内有交易代码的基金，我们也可以进行转托管，即“场外转场内”，或“场内转场外”，将基金份额在同一个身份证下不同的账户之间进行转移。通常场外转场内更多，因为许多基金在场外的申购费率打折。此类转换的流程比较复杂，通常只用于套利。
+
+### 分级基金
+
+我们在前面的章节里提到的分级A，就是分级基金的一种。分级基金简言之就是“借钱买股”“借钱买债”。分级基金分作母基金、A类子基、B类子基①三种。母基与其他基金并无二异，只是可以按比例拆分成A类子基、B类子基。其中A类子基获取固定收益，相当于借钱给B类子基，而B类子基则承担更多的盈利和亏损分级基金从2014年下半年开始发展壮大，尤以跟踪各类细分指数的被动型分级基金为多。通过分级基金，我们不仅可以投资各类指数，还可以投资于一些细分行业（行业指数），如银行、券商、环保、军工等。
+
+## 招募说明书
+《招募说明书》就像是一本产品说明书，它收纳了基金最全面的资料，类似的还有《上市公告书》和《基金合同》。后两者如果没有时间详细阅读，可以重点关注《招募说明书》。一般的《招募说明书》都有百页以上，但其实需要关注的内容并没有那么多，我们重点关注的内容有：
+
+1. 基金经理介绍。这个自然不用多说，基金经理就像一只基金的导演，很大程度上决定了基金的运作水平。该部分内容会列出基金经理的学历、曾担任过哪些基金的经理，同一时间是否兼任其他基金的经理等内容。某些基金经常更换基金经理，这需要引起我们的注意。许多人冲着明星基金经理去投资的，更得密切关注这一点。
+2. 申赎时间及方式，交易方式等。如是否为开放式基金，能否在证券交易所交易等。ETF基金的申购办法略有不同，后文还将详述
+3. 封闭期及封闭期结束后处理方法。许多开放式基金在认购期结束后，会暂时封闭一段时间（一个月内）才上市交易或开放申赎以利于基金建仓。通常封闭期超过一年以上，且有固定的封闭期结束日，才称为封闭式基金。封闭期时长以及结束后的处理办法是必须关注的。封闭期结束前，封闭式基金的折价率有缩窄的趋势，因为它将转换为可按净值赎回的LOF基金，或按净值清盘返还资金等。
+4. 巨额赎回的认定及处理方式。同一时间大量基金遭遇赎回（一般认为10%以上），基金可以采取部分顺延赎回、全部顺延赎回暂停赎回等措施。
+5. 基金转换业务。许多基金公司都有基金转换业务，方便客户在同一基金公司旗下的基金之间转换，其效果就相当于赎回一只，申购另一只，只是省下了一些申赎费用。这也是基金公司防止客户流失的种方法。
+6. 拒绝或暂停申购、赎回和转换的情形及处理方式。此处列举了各种可能性，如外汇额度不够用;又或者基金资产规模过大，找不到合适的投资产品（一些基金公司的旗帜型产品，为了树立业绩榜样，可能暂停申购）等。如果出现此类情况，基金公司会单独发布公告说明。
+7. 投资策略、范围、比例等。基金的投资策略是积极进取，还是稳健保本?投资范围是债券还是股票?是稳健型的大盘蓝筹股，还是高新技术的小盘成长股?各类投资的最低及最高比例，会不会使用杠杆（各类投资比例合计超过100%）?这部分内容很重要，不同的投资去向，收益性和风险性也各不相同。
+8. 业绩比较基准。通过这部分内容，可以对基金的收益性、风险性、业绩目标有一个大致了解。例如，货基的比较基准一般是银行存款利率，所以它的净值不会每天大幅波动。再如，如果一只基金的比较基准是上证A指数收益率×80%+上证国债指数收益率×20%，那么它的收益和风险大致就像是八成股票，两成国债，当然基金经理会努力使业绩好于比较基准。
+9. 估值方法（净值）。基金会在每个交易日结束后，将基金财产的价值估算出来，除以总的基金份额数量，得到每份基金的净值。基金的申购和赎回都是以这个净值为参考进行的，所以估多估少会直接影响基金持有人的收益。这里特别注意停牌股票的估值调整办法，还有一些无交易量的证券、非上市证券等的估值办法（一般是债券）等。
+10. 收益分配方法。主要是基金分红的一些事项，是发放现金还是基金红利份额等。某些基金还规定，“如果基金投资当期出现亏损则不进行收益分配”“基金当期收益先弥补上期亏损后，方可进行当期收益分配”等。
+11. 基金费率。基金的费率包括运营类费率，如管理费、托管费、营销费、指数使用费（指数型基金）;以及交易类费率，如申购费、赎回费、转换费率等。运营类费率虽然没有直接的“收费”动作，但却是实实在在的费用，它直接在基金净值里扣除掉了。而交易类费率，只有当投资人有交易操作时才会产生。为了促销，部分渠道的申购费率还可以打折①，一折、五折的都有，此类渠道多为基金官网或其他网络平台。申购费率也可能因为申购金额的不同而设置不同的收费档位，赎回费率则可能因为持有基金的时间长短而设置不同的收费档位。基金《招募说明书》一般没写其在证券交易所的买卖佣金费率，因为它是券商收取的，各家券商会有不同，就跟股票佣金一样。一般人更关注基金的历史业绩，而较少关注基金费率。有的货基运营类费率高达0.8%以上，有的却不足0.3%，因为货基的收益率本就不高②，所以后者已经赢在了起跑线上。又比如各类股票型基金中，主动管理型基金的费率相对最高，而指数型基金费率则大致低了一半。
+12. 建仓期，指数型基金尤其注意这一点。许多新成立的基金规定了三至六个月的建仓期，在建仓期内基金的仓位不受约束，有些基金甚至因此空仓了半年。
+13. 分级基金特别注意事项。如A:B的比例数量;A、B子基是永续型还是定期转换型;定折、下折、上折的办法;A类子基的利率规则等。分级基金种类繁多，未来发行的新分级基金，还可能冒出新的
+14. 风险揭示。该部分内容详细列举了各种可能的风险。虽然很多也是“八股文”，但有必要细读一遍。
+15. 合同终止及清算。一只基金之所以遭遇清算，两种可能性最大，要么是运行不划算（亏本），要么是基金公司或基金托管人（银行）没有能力继续运营（破产倒闭或被吊销牌照），且没有同行愿意接手的。基金的招募说明书中会有基金清算的条件，例如某基金规定:基金份额持有人数量连续60个工作日达不到100人，或连续60个工作日基金资产净值低于人民币5000万元。许多投资人喜欢在熊市抄底，注意不要遇到规模过小而清盘的基金。
+16. 其他。任何你关心的内容，都可以在《招募说明书》里找到。例如定期定额投资办法（定投）等。
+
+作为普通投资人，许多金融产品我们无法直接投资。基金拓宽了投资渠道，例如QDII可以投资港股、美股等;又如货币基金可以投资银行大宗存款。此外，一些基金还帮我们省了不少事。例如，指数型基金通过按比例持有成分股，达到跟踪指数的效果。因此我们不用一笔一笔去分散买入上百只股票（资金量小甚至做不到）。
