--- a/source/_posts/other/2020Flag.md
+++ b/source/_posts/other/2020Flag.md
@@ -41,8 +41,8 @@ toc: true
 - [x] 指数基金投资指南
 - [x] 定投十年财务自由-银行螺丝钉
 - [x] 买基金为自己加薪
-- [ ] 理财不用懂太多
-- [ ] 手把手教你读财报 唐朝
+- [x] 理财不用懂太多
+- [ ] 手把手教你读财报 唐朝<font color=#f40>（进行中）</font>
 - [ ] 投资第一课
 - [ ] 期权期货及其他衍生产品第七版本
 - [ ] 一个投资家的20年
@@ -72,8 +72,8 @@ toc: true
 
 ## 其他
 - [x] 搭建自己的GitHub Pages博客
-- [ ] 练字，达到字迹美观工整、笔力苍劲
+- [ ] 练字，达到字迹美观工整、笔力苍劲<font color=#f40>（进行中）</font>
 - [ ] 读一些哲学方面的书
 - [ ] 健身，年中能有8块腹肌
-- [ ] 学英语，单词量20000，不看字母能听懂英文电影
-- [ ] 学习理财相关的知识，开始钱生钱
+- [ ] 学英语，单词量20000，不看字母能听懂英文电影<font color=#f40>（进行中）</font>
+- [ ] 学习理财相关的知识，开始钱生钱<font color=#f40>（进行中）</font>
