--- a/source/_posts/other/投资类书单.md
+++ b/source/_posts/other/投资类书单.md
@@ -4,7 +4,7 @@ date: 2020-09-07 22:24:06
 categories: fund
 ---
 
-## 经典的投资书籍
+## 螺丝钉推荐的经典的投资书籍
 1. [ ] 聪明的投资者
 2. [ ] 证券分析
 3. [ ] 巴菲特致股东的信
@@ -30,40 +30,39 @@ categories: fund
 1. [x] 指数基金投资指南
 2. [x] 定投十年财务自由-银行螺丝钉
 3. [x] 买基金为自己加薪
-4. [ ] 理财不用懂太多
+4. [x] 理财不用懂太多
 5. [ ] 期权期货及其他衍生产品第七版本
 6. [ ] 手把手教你读财报
 7. [ ] 一个投资家的20年
 8. [ ] 投资第一课
 9. [x] 穷爸爸富爸爸
-10. [ ] 小狗钱钱
-11. [x] 聪明的投资者
-12. [ ] 证券分析（投资启蒙书籍，巴菲特的老师格雷厄姆先生的著作）
-13. [ ] 巴菲特致股东的信
-14. [ ] 滚雪球
-15. [ ] 巴菲特之道
-16. [ ] 巴菲特投资案例集
-17. [ ] 穿过迷雾
-18. [ ] 穷查理宝典
-19. [ ] 彼得林奇的成功投资
-20. [ ] 战胜华尔街
-21. [ ] 伯格读共同基金
-22. [ ] 长赢投资
-23. [ ] 共同基金常识
-24. [ ] 约翰博格的投资50年
-25. [ ] 股市长线法宝
-26. [ ] 投资者的未来
-27. [ ] 约翰聂夫的成功投资
-28. [ ] 股市真规则
-29. [ ] 投资最重要的事
-30. [ ] 投资中最简单的事
-31. [ ] 股市进阶之道——一个散户的自我修养
-32. [ ] 机构投资的创新之路
-33. [ ] 新经济下的财富管理
-34. [ ] 投资估价
-35. [ ] 低风险投资之路
-36. [ ] 可转债投资魔法书
-37. [ ] 分级基金与投资策略
+10. [x] 聪明的投资者
+11. [ ] 证券分析（投资启蒙书籍，巴菲特的老师格雷厄姆先生的著作）
+12. [ ] 巴菲特致股东的信
+13. [ ] 滚雪球
+14. [ ] 巴菲特之道
+15. [ ] 巴菲特投资案例集
+16. [ ] 穿过迷雾
+17. [ ] 穷查理宝典
+17. [ ] 彼得林奇的成功投资
+19. [ ] 战胜华尔街
+20. [ ] 伯格读共同基金
+21. [ ] 长赢投资
+22. [ ] 共同基金常识
+23. [ ] 约翰博格的投资50年
+24. [ ] 股市长线法宝
+25. [ ] 投资者的未来
+26. [ ] 约翰聂夫的成功投资
+27. [ ] 股市真规则
+28. [ ] 投资最重要的事
+29. [ ] 投资中最简单的事
+30. [ ] 股市进阶之道——一个散户的自我修养
+31. [ ] 机构投资的创新之路
+32. [ ] 新经济下的财富管理
+33. [ ] 投资估价
+34. [ ] 低风险投资之路
+35. [ ] 可转债投资魔法书
+36. [ ] 分级基金与投资策略
 
 ## 吴晓波推荐给年轻人的50本书
 ### 第一部分    当商业开始改变世界
